--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <div class="whatsapp">
-    <i class="fab fa-whatsapp fs-4"></i>
+    <i class="fab fa-whatsapp fs-1"></i>
   </div>
   <header>
     <nav class="navbar navbar-expand-lg py-2 rtl bg-nav">
@@ -47,8 +47,9 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-dark " aria-labelledby="navbarDarkDropdownMenuLink">
                 <li><a class="dropdown-item text-primary" href="#">الخدمات العقارية</a></li>
-                <li><a class="dropdown-item text-primary" href="#">الخدمات العقارية</a></li>
-                <li><a class="dropdown-item text-primary" href="#">الخدمات العقارية</a></li>
+                <li><a class="dropdown-item text-primary" href="#">الخدمات السياحية</a></li>
+                <li><a class="dropdown-item text-primary" href="#">الخدمات التجارية</a></li>
+                <li><a class="dropdown-item text-primary" href="#">الخدمات التعليمية</a></li>
               </ul>
             </li>
             <li class="nav-item pe-3">
@@ -59,16 +60,16 @@
           <div class=" d-flex socal active-icon-socal">
             <div class="">
               <a href="">
-                <i class="fas fa-phone-alt fs-3 text-primary"></i>
+                <i class="fas fa-phone-alt fs-2 text-primary"></i>
               </a>
             </div>
-            <div class="mx-3">
+            <div class="mx-4">
               <a href="">
-                <i class="fab fa-facebook-messenger fs-3 text-primary"></i>
+                <i class="fab fa-facebook-messenger fs-2 text-primary"></i>
               </a>
             </div>
             <div class="">
-              <i class="far fa-comment-dots fs-3 text-primary"></i>
+              <i class="far fa-comment-dots fs-2 text-primary"></i>
             </div>
             
           </div>
@@ -88,28 +89,32 @@
         </div>
         <div class="row text-white justify-content-center">
           <div class="col-md-6">
-            <div class=" ms-md-5 ms-0 bg-primary">
-              <div class="row">
-                <div class="p-0 col-md-6 col-6 d-flex justify-content-center align-items-center">
-                  <p class="title-aqart">عقارات تركيا</p>
-                </div>
-                <div class=" col-md-6 col-6">
-                  <img src="./images/Rectangle 25.png" class="w-100" alt="">
+            <a href="">
+              <div class=" ms-md-5 ms-0 bg-primary">
+                <div class="row">
+                  <div class="p-0 col-md-6 col-6 d-flex justify-content-center align-items-center">
+                    <p class="title-aqart">عقارات تركيا</p>
+                  </div>
+                  <div class=" col-md-6 col-6">
+                    <img src="./images/Rectangle 25.png" class="w-100" alt="">
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col-md-6 mt-md-0 mt-4">
-            <div class=" me-md-5 me-0 bg-primary">
-              <div class="row">
-                <div class="p-0 col-md-6 col-6 d-flex justify-content-center align-items-center">
-                  <p class="title-aqart">عقارات الأردن</p>
-                </div>
-                <div class=" col-md-6 col-6">
-                  <img src="./images/Rectangle 23.png" class="w-100" alt="">
+            <a href="">
+              <div class=" me-md-5 me-0 bg-primary">
+                <div class="row">
+                  <div class="p-0 col-md-6 col-6 d-flex justify-content-center align-items-center">
+                    <p class="title-aqart">عقارات الأردن</p>
+                  </div>
+                  <div class=" col-md-6 col-6">
+                    <img src="./images/Rectangle 23.png" class="w-100" alt="">
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
