--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
           </ul>
           
           <div class=" d-flex socal active-icon-socal">
-            <div class="">
+            <div class="icon">
               <a href="">
-                <i class="fas fa-phone-alt fs-2 text-primary"></i>
+                <i class="fas fa-phone-alt fs-1  text-primary"></i>
               </a>
             </div>
-            <div class="mx-4">
+            <div class="mx-4 icon">
               <a href="">
-                <i class="fab fa-facebook-messenger fs-2 text-primary"></i>
+                <i class="fab fa-facebook-messenger  fs-1 text-primary"></i>
               </a>
             </div>
             <div class="">
-              <i class="far fa-comment-dots fs-2 text-primary"></i>
+              <i class="far fa-comment-dots fs-1 text-primary"></i>
             </div>
             
           </div>
