--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse text-primary" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item pe-4">
-              <a class="nav-link active text-primary active" aria-current="page" href="#">الرئيسية </a>
+              <a class="nav-link active text-primary active" aria-current="page" href="./index.html">الرئيسية </a>
             </li>
             <li class="nav-item pe-3">
               <a class="nav-link text-primary" href="#">دار البركات</a>
@@ -53,7 +53,7 @@
               </ul>
             </li>
             <li class="nav-item pe-3">
-              <a class="nav-link text-primary" href="#">الرؤية</a>
+              <a class="nav-link text-primary" href="./ruya.html">الرؤية</a>
             </li>
           </ul>
           
@@ -89,7 +89,7 @@
         </div>
         <div class="row text-white justify-content-center">
           <div class="col-md-6">
-            <a href="">
+            <a href="./aqar.html">
               <div class=" ms-md-5 ms-0 bg-primary">
                 <div class="row">
                   <div class="p-0 col-md-6 col-6 d-flex justify-content-center align-items-center">
@@ -386,10 +386,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class=" mt-3">
-          <button class=" btn btn-primary">عرض الكل</button>
-        </div> -->
-
+       
       </div>
     </section>
     <section class="video text-white ">
