--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
   <div class="modal-dialog modal-xl modal-dialog-centered ">
     <div class="modal-content bg-modal">
       <div class="modal-body py-4">
+        <div class="rtl mx-md-4 mx-2">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+        </div>
         <div class="row justify-content-center">
           <div class="col-md-5">
             <img src="./images/img13.png" class="w-100" alt="">
@@ -150,6 +154,10 @@
   <div class="modal-dialog modal-xl modal-dialog-centered ">
     <div class="modal-content bg-modal">
       <div class="modal-body py-4">
+        <div class="rtl mx-md-4 mx-2">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+        </div>
         <div class="row justify-content-center">
           <div class="col-md-5">
             <img src="./images/img13.png" class="w-100" alt="">
@@ -171,6 +179,10 @@
   <div class="modal-dialog modal-xl modal-dialog-centered ">
     <div class="modal-content bg-modal">
       <div class="modal-body py-4">
+        <div class="rtl mx-md-4 mx-2">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+        </div>
         <div class="row justify-content-center">
           <div class="col-md-5">
             <img src="./images/img13.png" class="w-100" alt="">
@@ -192,6 +204,10 @@
   <div class="modal-dialog modal-xl modal-dialog-centered ">
     <div class="modal-content bg-modal">
       <div class="modal-body py-4">
+        <div class="rtl mx-md-4 mx-2">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+        </div>
         <div class="row justify-content-center">
           <div class="col-md-5">
             <img src="./images/img13.png" class="w-100" alt="">
