--- a/index.html
+++ b/index.html
@@ -501,6 +501,10 @@
 
         </div>
       </div>
+      <div class="text-center copyright">
+        <p> جميع الحقوق محفوظة © 2022 دار البركات
+        </p>
+      </div>
     </div>
   </footer>
 
