--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <i class="fab fa-whatsapp fs-1"></i>
   </div>
   <header>
-    <nav class="navbar navbar-expand-lg py-2 rtl bg-nav">
+    <nav class="navbar navbar-expand-lg rtl bg-nav">
       <div class=" container">
         <a class="navbar-brand" href="#"><img src="./images/Group 6.png" class="logo" alt=""></a>
         <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -57,24 +57,18 @@
               <a class="nav-link text-primary" href="./ruya.html">الرؤية</a>
             </li>
           </ul>
-
-          <div class=" d-flex socal active-icon-socal">
+          <div class="d-flex ">
             <div class="icon">
               <a href="">
-                <i class="fas fa-phone-alt fs-2  text-primary"></i>
+                <i class="fas fa-phone-alt fs-2 text-primary"></i>
               </a>
             </div>
-            <div class="mx-4 icon">
+            <div class="ms-4 icon">
               <a href="">
                 <i class="fab fa-facebook-messenger  fs-2 text-primary"></i>
               </a>
             </div>
-            <div class="">
-              <i class="far fa-comment-dots fs-2 text-primary"></i>
-            </div>
-
           </div>
-
         </div>
       </div>
     </nav>
@@ -132,7 +126,6 @@
           <div class="modal-body py-4">
             <div class="rtl mx-md-4 mx-2">
               <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
             </div>
             <div class="row justify-content-center">
               <div class="col-md-5">
@@ -147,7 +140,6 @@
                 إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا أن غزو ،</p>
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -157,7 +149,6 @@
           <div class="modal-body py-4">
             <div class="rtl mx-md-4 mx-2">
               <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
             </div>
             <div class="row justify-content-center">
               <div class="col-md-5">
@@ -172,7 +163,6 @@
                 إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا أن غزو ،</p>
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -182,7 +172,6 @@
           <div class="modal-body py-4">
             <div class="rtl mx-md-4 mx-2">
               <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
             </div>
             <div class="row justify-content-center">
               <div class="col-md-5">
@@ -197,7 +186,6 @@
                 إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا أن غزو ،</p>
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -207,7 +195,6 @@
           <div class="modal-body py-4">
             <div class="rtl mx-md-4 mx-2">
               <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
             </div>
             <div class="row justify-content-center">
               <div class="col-md-5">
@@ -222,7 +209,6 @@
                 إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا إجلاء وتنامت عدد مع. لقهر معركة لبلجيكا أن غزو ،</p>
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -347,11 +333,9 @@
         <div class="row py-5">
           <div class="col-md-12 text-white">
             <div class="owl-carousel owl-theme">
-
               <div class="hover-btn">
                 <div class="itme-card-news  px-0 px-md-4">
                   <img src="./images/img7.png" class=" w-100" alt="">
-
                   <div class="text-box-img text-center">
                     <h3>عنوان</h3>
                     <p>خسائر اللازمة ومطالبة حدة بل. الآخر الحلفاء أن غزو,
@@ -362,11 +346,9 @@
                   <button class=" btn btn-primary-2">عرض المزيد</button>
                 </div>
               </div>
-
               <div class="hover-btn">
                 <div class="itme-card-news  px-0 px-md-4">
                   <img src="./images/img5.png" class=" w-100" alt="">
-
                   <div class="text-box-img text-center">
                     <h3>عنوان</h3>
                     <p>خسائر اللازمة ومطالبة حدة بل. الآخر الحلفاء أن غزو,
@@ -380,7 +362,6 @@
               <div class="hover-btn">
                 <div class="itme-card-news  px-0 px-md-4">
                   <img src="./images/img6.png" class=" w-100" alt="">
-
                   <div class="text-box-img text-center">
                     <h3>عنوان</h3>
                     <p>خسائر اللازمة ومطالبة حدة بل. الآخر الحلفاء أن غزو,
@@ -394,7 +375,6 @@
               <div class="hover-btn">
                 <div class="itme-card-news  px-0 px-md-4">
                   <img src="./images/img5.png" class=" w-100" alt="">
-
                   <div class="text-box-img text-center">
                     <h3>عنوان</h3>
                     <p>خسائر اللازمة ومطالبة حدة بل. الآخر الحلفاء أن غزو,
@@ -405,23 +385,17 @@
                   <button class=" btn btn-primary-2">عرض المزيد</button>
                 </div>
               </div>
-
-
             </div>
           </div>
         </div>
-
       </div>
     </section>
-
     <section class="video text-white">
       <div class=" container">
         <div class="row">
           <div class=" col-12">
             <div class="itme-card-video mx-0 mx-md-2">
               <img src="./images/Rectangle 34.png" class="w-100" alt="">
-
-
               <div class="play-icon position-absolute top-50 start-50 translate-middle"><a href=""
                   data-fancybox="Slider" data-src="./images/Rectangle 34.png" class="prePhoto" data-rel="prettyPhoto">
                   <i class="fas fa-play-circle"></i>
@@ -429,10 +403,6 @@
               </div>
             </div>
           </div>
-
-
-
-
         </div>
       </div>
     </section>
@@ -442,66 +412,49 @@
         <p>اشترك في قناة اليوتيوب الخاصة بنا </p>
         <button class="btn btn-dark text-primary px-4">Subscribe</button>
       </div>
-
     </section>
 
   </main>
-  <footer class=" py-3 rtl">
+  <footer class=" py-4 rtl">
     <div class=" container">
       <div class="row">
-        <div class="col-md-5">
-          <img src="./images/Group 6.png" class="w-25" alt="">
-          <p class=" text-white mt-3 pe-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et
-            dolore magna aliqua.</p>
-          <ul>
+        <div class="col-md-4 pe-5 mt-4">
+          <img src="./images/Group 6.png" class="w-50" alt="">
+        </div>
+        <div class="col-md-4 text-footer text-white mt-4">
+          <h2>تواصل معنا</h2>
+          <div class="text-footer text-white mt-3 border-bottom border-primary">
+            <p class=" mb-2"><i class="fas fa-map-marker-alt me-2"></i>العنوان</p>
+          </div>
+          <div class="text-footer text-white mt-3 border-bottom border-primary">
+            <p class=" mb-2"><i class="fas fa-phone-alt me-2"></i>الهاتف : 0000000</p>
+          </div>
+          <div class="text-footer text-white mt-3">
+            <p class=" mb-2"><i class="fas fa-map-marker-alt me-2"></i>info@gmail.com</p>
+          </div>
+        </div>
+        <div class="col-md-4 text-footer text-white mt-4">
+          <h2>مجالات</h2>
+          <ul class=" ms-5 mt-3">
+            <li class=" my-2">شاهد</li>
+            <li class=" my-2">شاهد</li>
+            <li class=" my-2">شاهد</li>
+            <li class=" my-2">شاهد</li>
+          </ul>
+
+          <ul class=" mt-3">
 
             <li class=" d-inline-block me-4 fs-4"><a href=""><i class="fas fa-phone-alt"></i></a></li>
-            <li class=" d-inline-block me-4 fs-4"><a href=""><i class="fab fa-youtube"></i></a></li>
+            <li class=" d-inline-block me-4 fs-4"><a href=""><i class="fas fa-envelope"></i></a></li>
             <li class=" d-inline-block me-4 fs-4"><a href=""><i class="fab fa-linkedin-in"></i></a></li>
 
-            <li class=" d-inline-block me-4 fs-4"><a href=""><i class="fab fa-twitter"></i></a></li>
+            <li class=" d-inline-block me-4 fs-4"><a href=""><i class="fab fa-snapchat-ghost"></i></a></li>
             <li class=" d-inline-block me-4 fs-4"><a href=""><i class="fab fa-facebook-f"></i></a></li>
 
           </ul>
         </div>
-        <div class="col-md-7 text-white mt-4">
-          <div class="row">
-            <div class="col-md-4 col-6">
-              <div class="title-footer">
-                <p>Resources</p>
-              </div>
-              <ul>
-                <li>News</li>
-                <li>News</li>
-                <li>News</li>
-              </ul>
-            </div>
-            <div class="col-md-4 col-6">
-              <div class="title-footer">
-                <p>Services</p>
-              </div>
-              <ul>
-                <li>News</li>
-                <li>News</li>
-                <li>News</li>
-              </ul>
-            </div>
-            <div class="col-md-4 col-6 mt-3 mt-md-0">
-              <div class="title-footer">
-                <p>Products</p>
-              </div>
-              <ul>
-                <li>News</li>
-                <li>News</li>
-                <li>News</li>
-              </ul>
-            </div>
-          </div>
-
-        </div>
       </div>
-      <div class="text-center copyright">
+      <div class=" copyright mt-1">
         <p> جميع الحقوق محفوظة © 2022 دار البركات
         </p>
       </div>
